--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "jquery": "^3.7.0",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^18.16.15",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
