--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
     "jquery": "^3.7.0",
+    "moment": "^2.29.4",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
     "sass": "^1.62.1",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
@@ -40,6 +42,9 @@
     "prisma": "^4.14.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "ct3aMetadata": {
     "initVersion": "7.13.1"
